pcreview.co.uk (archived on 2009-06-15)
{
  "alexa_rank": 10858,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 1836,
  "classifier_probability": 0.89,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.11,
  "homepage_snapshot_redirected_domain": "pcreview.co.uk",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090305150716id_/http://www.pcreview.co.uk/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090305150716id_/http%3A//pcreview.co.uk",
  "interval": "2009_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "pcreview.co.uk",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090615041726id_/http%3A//www.pcreview.co.uk/privacy.php",
  "policy_title": "PC Review - Privacy Policy",
  "policy_url": "pcreview.co.uk/privacy.php",
  "sha1": "25e1e0fbc2ba36e63f2cbba0139b26080c58df5b",
  "simhash": 18411112032101458792,
  "simhash_updated": false,
  "site_hostname": "pcreview.co.uk",
  "site_url": "http://pcreview.co.uk",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090615041726",
  "word_count": 298,
  "year": 2009
}

--- a/p/pc/pcr/pcreview.co.uk.html
+++ b/p/pc/pcr/pcreview.co.uk.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the pcreview.co.uk privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216030147id_/http%3A//www.pcreview.co.uk/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the pcreview.co.uk privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615041726id_/http%3A//www.pcreview.co.uk/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html dir="ltr" lang="en"><head>
 <title>PC Review - Privacy Policy</title>
@@ -32,6 +32,7 @@ var IMGDIR_MISC = "http://www.pcreview.co.uk/images/misc";
 <div id="titlebar" style=""><img height="80" alt="" src="http://www.pcreview.co.uk/template/Top_Title.jpg" width="300"><span class="topadvert">
 
 
+
 <script type="text/javascript"><!--
 	e9 = new Object();
     e9.size = "468x60";
@@ -62,29 +63,7 @@ var IMGDIR_MISC = "http://www.pcreview.co.uk/images/misc";
 <li><a class="last" href="http://www.pcreview.co.uk/guidelines.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Forum Guidelines</a></li></ul>
             </li><li><a href="http://www.pcreview.co.uk/features.php" class="topmenu"><img alt="" src="http://www.pcreview.co.uk/template/Features.gif" width="100" height="20" border="0"></a>
 				<ul><li><a href="http://www.pcreview.co.uk/retailers"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Retailer Ratings </a></li>
-				<li><a href="http://www.pcreview.co.uk/broadband/"><img alt="" src="http://www.pcreview.co.uk/template/YellowArrow.gif"> Broadband</a>
-				  <ul>
-				    <li><a href="http://www.pcreview.co.uk/broadband/"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Compare Broadband</a></li>
-			        <li><a href="http://www.pcreview.co.uk/broadband/broadband-offers.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Broadband Offers</a></li>
-			        <li><a href="http://www.pcreview.co.uk/broadband/fastest-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Fastest Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/unlimited-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Unlimited Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/cheapest-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Cheapest Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/aol-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">AOL Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/be-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Be Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/bt-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">BT Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/demon-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Demon Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/eclipse-internet.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Eclipse Internet</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/o2-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">O2 Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/orange-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Orange Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/pipex-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Pipex Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/plus-net-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Plus Net Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/sky-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Sky Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/talk-talk-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Talk Talk Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/tiscali-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Tiscali Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/uk-online-broadband.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">UK Online Broadband</a></li>
-				    <li><a href="http://www.pcreview.co.uk/broadband/virgin-media.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Virgin Media</a></li>
-				  </ul>
-				</li>
+
 				<li><a href="http://www.pcreview.co.uk/traders"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">User Feedback</a></li><li><a href="http://www.pcreview.co.uk/arcade"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Arcade</a></li><li><a href="http://www.pcreview.co.uk/gallery"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Gallery</a></li><li><a href="http://www.pcreview.co.uk/forums/forum-102.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">For Sale / Wanted </a></li><li><a href="http://www.pcreview.co.uk/forums/forum-150.php"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Newsgroups</a></li><li><a href="http://www.pcreview.co.uk/startup"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Startup Database</a></li>
 <li><a href="http://www.pcreview.co.uk/antivirus"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Online Antivirus</a></li>
 <li><a class="last" href="http://www.pcreview.co.uk/forums/archive/"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Bullet.gif">Sitemap</a></li></ul>
@@ -131,7 +110,7 @@ Please <a href="http://www.pcreview.co.uk/forums/register.php"> Register</a> or 
 
 <div class="menutitle"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Latest.jpg" height="20" width="140"></div>
 <div class="menubuttons"><div class="leftsidemenu">
-<a href="http://www.pcreview.co.uk/reviews/Motherboards/Supermicro_X7DWA-N/">Supermicro X7DWA-N</a><a href="http://www.pcreview.co.uk/reviews/Storage/QNAP_TS-209_Pro_II/">QNAP TS-209 Pro II</a><a href="http://www.pcreview.co.uk/articles/Windows/Run_Linux_in_Windows/">Run Linux in Windows</a><a href="http://www.pcreview.co.uk/reviews/Software/Kaspersky_Internet_Security_7/">Kaspersky Internet Security 7</a><a href="http://www.pcreview.co.uk/reviews/Input_Devices/Aten_CS62DU_KVM/">Aten CS62DU KVM</a><a href="http://www.pcreview.co.uk/articles/Windows/Vista_Codecs/">Vista Codecs</a><a href="http://www.pcreview.co.uk/articles/Windows/Vista_Power_Options/">Vista Power Options</a><a href="http://www.pcreview.co.uk/reviews/Software/Diskeeper_2007/">Diskeeper 2007</a><a href="http://www.pcreview.co.uk/reviews/Audio/iPod_Nano/">iPod Nano</a><a href="http://www.pcreview.co.uk/articles/Consumer_Advice/Distance_Buying_by_Internet,_Fax,_Mail_or_Phone/">Distance Buying by Internet, Fax, Mail or Phone</a>
+<a href="http://www.pcreview.co.uk/reviews/Software/Kaspersky_Internet_Security_2009/">Kaspersky Internet Security 2009</a><a href="http://www.pcreview.co.uk/reviews/Motherboards/Supermicro_X7DWA-N/">Supermicro X7DWA-N</a><a href="http://www.pcreview.co.uk/reviews/Storage/QNAP_TS-209_Pro_II/">QNAP TS-209 Pro II</a><a href="http://www.pcreview.co.uk/articles/Windows/Run_Linux_in_Windows/">Run Linux in Windows</a><a href="http://www.pcreview.co.uk/reviews/Software/Kaspersky_Internet_Security_7/">Kaspersky Internet Security 7</a><a href="http://www.pcreview.co.uk/reviews/Input_Devices/Aten_CS62DU_KVM/">Aten CS62DU KVM</a><a href="http://www.pcreview.co.uk/articles/Windows/Vista_Codecs/">Vista Codecs</a><a href="http://www.pcreview.co.uk/articles/Windows/Vista_Power_Options/">Vista Power Options</a><a href="http://www.pcreview.co.uk/reviews/Software/Diskeeper_2007/">Diskeeper 2007</a><a href="http://www.pcreview.co.uk/reviews/Audio/iPod_Nano/">iPod Nano</a>
 </div></div>
 
 
@@ -185,8 +164,8 @@ Privacy Policy
 <p>PC Review is not responsible for the content of external internet sites. You are advised to read the privacy policy of external sites before disclosing any personal information.</p>
 
 <p><b>Cookies </b></p>
-<p>A "cookie" is a small data text file that is placed in your browser and allows PC Review to recognize you each time you visit this site(customisation etc). Cookies themselves do not contain any personal information, and PC Review does not use cookies to collect personal information. Cookies may also be used by 3rd party content providers such as advertisers.</p>
-<p>Some of   these advertisers may use technology such as cookies and web beacons when they   advertise on our site (for example, Doubleclick DART), and you can opt out of these by changing your cookie settings from your Internet Options page.</p>
+<p>A "cookie" is a small data text file that is placed in your browser and allows PC Review to recognize you each time you visit this site (customisation etc). Cookies themselves do not contain any personal information, and PC Review does not use cookies to collect personal information. Cookies may also be used by 3rd party content providers such as advertisers.</p>
+<p>Some of   these advertisers may use technology such as cookies and web beacons when they   advertise on our site (for example, Doubleclick DART), and you can opt out of these by changing your cookie settings from your Internet Options page. We use third-party advertising companies to serve ads when you visit our   website. These companies may use information about your visits to this and other websites   in order to provide advertisements about goods and services of interest to you.   </p>
 <p><b>Remember The Risks Whenever You Use The Internet </b></p>
 <p>While we do our best to protect your personal information, we cannot guarantee the security of any information that you transmit to PC Review and you are solely responsible for maintaining the secrecy of any passwords or other account information. In addition other Internet sites or services that may be accessible through PC Review have separate data and privacy practices independent of us, and therefore we disclaim any responsibility or liability for their policies or actions. </p>
 
@@ -203,20 +182,22 @@ Privacy Policy
 <div class="menutext">
   <div align="center">
 <form action="http://www.pcreview.co.uk/forums/poll.php" method="post">
-<input type="hidden" name="s" value="35c3cb92c6f2260c90247e739798f209">
+<input type="hidden" name="s" value="c2f2a105f9143bbedc06948f691e5f78">
 <input type="hidden" name="do" value="pollvote">
-<input type="hidden" name="pollthreadid" value="3521267">
-<input type="hidden" name="pollid" value="183">
+<input type="hidden" name="pollthreadid" value="3729369">
+<input type="hidden" name="pollid" value="196">
 
-<font face="Tahoma" style="font-size: 11px"><b>How often do you run anti-spyware/virus scans?</b><p>
-</p><div><label for="rb_optionnumber_1"><input type="radio" name="optionnumber" value="1" id="rb_optionnumber_1">At least once a day</label></div>
-<div><label for="rb_optionnumber_2"><input type="radio" name="optionnumber" value="2" id="rb_optionnumber_2">Around once a week</label></div>
-<div><label for="rb_optionnumber_3"><input type="radio" name="optionnumber" value="3" id="rb_optionnumber_3">Each month</label></div>
-<div><label for="rb_optionnumber_4"><input type="radio" name="optionnumber" value="4" id="rb_optionnumber_4">When I remember</label></div>
-<div><label for="rb_optionnumber_5"><input type="radio" name="optionnumber" value="5" id="rb_optionnumber_5">Never</label></div>
+<font face="Tahoma" style="font-size: 11px"><b>Have you done any Computer Training?</b><p>
+</p><div><label for="rb_optionnumber_1"><input type="radio" name="optionnumber" value="1" id="rb_optionnumber_1">MCSE / MCSA</label></div>
+<div><label for="rb_optionnumber_2"><input type="radio" name="optionnumber" value="2" id="rb_optionnumber_2">CCNA</label></div>
+<div><label for="rb_optionnumber_3"><input type="radio" name="optionnumber" value="3" id="rb_optionnumber_3">A+ Certification</label></div>
+<div><label for="rb_optionnumber_4"><input type="radio" name="optionnumber" value="4" id="rb_optionnumber_4">IT Degree</label></div>
+<div><label for="rb_optionnumber_5"><input type="radio" name="optionnumber" value="5" id="rb_optionnumber_5">Other training</label></div>
+<div><label for="rb_optionnumber_6"><input type="radio" name="optionnumber" value="6" id="rb_optionnumber_6">Self Taught</label></div>
+<div><label for="rb_optionnumber_7"><input type="radio" name="optionnumber" value="7" id="rb_optionnumber_7">None, I'm a beginner!</label></div>
 <br>
 <input type="submit" class="button" value="Vote"><br>
-<a href="http://www.pcreview.co.uk/forums/poll.php?do=showresults&amp;pollid=183"><br>View Poll Results</a></font></form>
+<a href="http://www.pcreview.co.uk/forums/poll.php?do=showresults&amp;pollid=196"><br>View Poll Results</a></font></form>
   </div>
 </div>
 
@@ -236,6 +217,7 @@ Please enter the search terms in the box below to search the entire site.<br><br
 
   </div>
 </div>
+
 
 
 <div class="menutitle"><img alt="" src="http://www.pcreview.co.uk/template/Menu_Sponsors.jpg" height="20" width="140"></div>
