--- a/p/pr/pre/prettymay.net.html
+++ b/p/pr/pre/prettymay.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the prettymay.net privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216040746id_/http%3A//www.prettymay.net/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the prettymay.net privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615042002id_/http%3A//www.prettymay.net/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
 <title>PrettyMay Call Recorder for Skype, Call Center for Skype, Skype PBX, Skype recorder, Record Skype calls, Skype for business, free trial</title>
@@ -16,7 +16,7 @@
 <meta name="rating" content="general">
 <link rel="stylesheet" type="text/css" href="global.css">
 <link rel="stylesheet" href="./object.css" type="text/css">
-<link rel="stylesheet" href="./text.css" type="text/css">
+<link rel="stylesheet" href="./menu/dropdown_three.css" media="screen">
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="Bookmark" href="/favicon.ico">
 </head>
@@ -30,20 +30,53 @@
 		<div class="slogan"><h1>building business solutions for skype</h1></div>
 		<div class="headright"><img src="images/certified_title.png" alt="Skype Certified"></div>
 		<div class="cl"></div>
-		<div class="menu">
-			<ul>
-				<li><a href="index.htm">Home</a></li>
-				<li><a href="products.htm">Products</a></li>
-				<li><a href="download.htm">Download</a></li>
-				<li><a href="store.htm">Pricing</a></li>
-				<li><a href="support.htm">Support</a></li>
-				<li><a href="partners.htm">Partners</a></li>
-				<li><a href="http://www.prettymay.net/forum/">Forum</a></li>
-			</ul>
-		</div>
+		<!--Menu Start-->
+    <div>
+      <ul id="menu">
+        <li><a href="index.htm"><b>Home</b></a></li>
+        <li class="current"><a class="sub" href="products.htm"><b>Products</b>
+          </a>
+            <ul class="sub1">
+              <li><a href="./callcenter/index.htm">Skype Call Center</a></li>
+              <li><a href="./skype_pbx_gateway/skype_gateway_to_pbx.htm">Skype PBX Gateway</a></li>
+              <li><a href="./callrecorder/index.htm">Skype Call Recorder</a></li>
+            </ul>
+        </li>
+        <li><a href="download.htm"><b>Download</b></a></li>
+		<li><a class="sub"><b>Pricing</b></a>
+		<ul class="sub1">
+			<li><a href="./store_cc.htm">Skype Call Center</a></li>
+			<li><a href="./store_cr.htm">Skype Call Recorder</a></li>
+		</ul>
+		</li>
+        <li><a href="support.htm"><b>Support</b></a></li>
+		<li class="current"><a class="sub" href="partners.htm"><b>Partners</b></a>
+		<ul class="sub1">
+			<li><a class="fly" href="./partners.htm">Resellers</a>
+				<ul class="fly1">
+					<li><a href="./partners.htm">Resell PrettyMay</a></li>
+					<li><a href="http://www.prettymay.net/partners/login.php?route=account/create">Become a Reseller</a></li>
+					<li><a href="http://www.prettymay.net/partners/login.php?route=account/login">Reseller Login</a></li>
+					<li><a href="./resellers.htm">Find Reseller</a></li>
+				</ul>
+			 </li>
+			<li><a href="./techpartners.htm">Technical Partners</a></li>
+		</ul>
+    	</li>
+        <li><a href="http://www.prettymay.net/forum"><b>Forum</b></a></li>
+        <li><a class="sub" href="http://www.prettymay.net/faq"><b>Faq</b>
+          </a>
+            <ul class="sub1">
+              <li><a href="http://www.prettymay.net/callcenter_faq/">Call Center FAQ</a></li>
+              <li><a href="http://www.prettymay.net/pbxgateway/en/faq/">PBX Gateway FAQ</a></li>
+              <li><a href="http://www.prettymay.net/faq/">Call Recorder FAQ</a></li>
+            </ul>
+        </li>
+      </ul>
+    </div>
+    <!--Menu End-->
 	</div>
 	<div class="mainbox">
-		<div class="nav"><a href="index.htm">Home</a>&nbsp;&gt;&nbsp;Privacy Policy</div>
 		<div>
 		<table width="720" align="center" cellspacing="0" cellpadding="0">
     <tbody><tr>
