--- a/l/ls/lso/lsoft.com.html
+++ b/l/ls/lso/lsoft.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the lsoft.com privacy policy that was archived on 2008-09-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20080914193835id_/http%3A//www.lsoft.com/corporate/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the lsoft.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615044818id_/http%3A//www.lsoft.com/corporate/privacypolicy.asp) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <title>L-Soft Privacy Policy - L-Soft</title>
@@ -187,7 +187,7 @@
 <tbody><tr><td bgcolor="#c2cbd5"><p class="boxcontent"><a href="corporate.asp">About L-Soft</a><br><a href="facts.asp">Facts at a Glance</a><br><a href="management.asp">Management Bios</a><br><a href="ericthomas.asp">Eric Thomas, CEO</a><br><a href="history.asp">History of L-Soft</a><br><a href="history_listserv.asp">History of LISTSERV</a><br><a href="press.asp">Press Kits</a><br><a href="jobs.asp">Jobs at L-Soft</a><br><a href="community.asp">Community Relations</a><br><a href="legal.asp">Legal</a><br><a href="trademark.asp">Trademark Usage</a><br><a href="privacypolicy.asp">Privacy Policy</a></p></td></tr>
 </tbody></table> </td> 
       </tr> 
-      <tr><td colspan="4"><a href="../resources/listserv-community.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('lsvcommunity','','../images/lsvcommunity_on.gif',1)"><img src="../images/lsvcommunity_off.gif" alt="LISTSERV Community" title="LISTSERV Community" name="lsvcommunity" width="158" height="25" border="0"></a><img src="../images/bottoma.jpg" width="498" height="25" alt=""><a href="../corporate/legal.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('legal','','../images/legal_on.gif',1)"><img src="../images/legal_off.gif" alt="Legal" title="Legal" name="legal" width="35" height="25" border="0"></a><a href="../contact/sitemap.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('sitemap','','../images/sitemap_on.gif',1)"><img src="../images/sitemap_off.gif" alt="Site Map" title="Site Map" name="sitemap" width="61" height="25" border="0"></a></td></tr>
+      <tr><td colspan="4"><a href="../resources/listserv-community.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('lsvcommunity','','../images/lsvcommunity_on.gif',1)"><img src="../images/lsvcommunity_off.gif" alt="LISTSERV Community" title="LISTSERV Community" name="lsvcommunity" width="158" height="25" border="0"></a><a href="../news/choiceawards.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('choice','','../images/choiceawards_on.gif',1)"><img src="../images/choiceawards_off.gif" alt="LISTSERV Choice Awards" title="LISTSERV Choice Awards" name="choice" width="176" height="25" border="0"></a><a href="../news/newsletter-us.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('atwork','','../images/atwork_on.gif',1)"><img src="../images/atwork_off.gif" alt="LISTSERV at Work Newsletter" title="LISTSERV at Work Newsletter" name="atwork" width="138" height="25" border="0"></a><img src="../images/bottoma.jpg" width="184" height="25" alt=""><a href="../corporate/legal.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('legal','','../images/legal_on.gif',1)"><img src="../images/legal_off.gif" alt="Legal" title="Legal" name="legal" width="35" height="25" border="0"></a><a href="../contact/sitemap.asp" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('sitemap','','../images/sitemap_on.gif',1)"><img src="../images/sitemap_off.gif" alt="Site Map" title="Site Map" name="sitemap" width="61" height="25" border="0"></a></td></tr>
 <tr><td colspan="4"><img src="../images/bottomb.jpg" width="752" height="6" alt=""></td></tr>
 <tr><td colspan="12"><img src="../images/bottomshadow.gif" width="760" height="4" alt=""></td></tr> 
     </tbody></table> 
@@ -577,7 +577,18 @@
 <![endif]-->
 </div>
 
-<div id="screenshot" style="position:absolute; left:1px; top:1px; width: 1px; height: 1px; z-index:50; visibility: hidden"></div>  
+<div id="screenshot" style="position:absolute; left:1px; top:1px; z-index:50; visibility: hidden"></div>
+
+
+<script type="text/javascript">
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+</script><script src="https://ssl.google-analytics.com/ga.js" type="text/javascript"></script>
+<script type="text/javascript">
+var pageTracker = _gat._getTracker("UA-3167554-2");
+pageTracker._trackPageview();
+</script>
+  
 
 
 </body></html>
