--- a/y/yo/you/youngfatties.com.html
+++ b/y/yo/you/youngfatties.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the youngfatties.com privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216165830id_/http%3A//www.youngfatties.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youngfatties.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615062044id_/http%3A//youngfatties.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 	<title>Privacy Policy</title>
