--- a/b/bl/blo/blogshares.com.html
+++ b/b/bl/blo/blogshares.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blogshares.com privacy policy that was archived on 2008-12-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081219111947id_/http%3A//blogshares.com/wikihelp/Privacy_Policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blogshares.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615062237id_/http%3A//blogshares.com/wikihelp/Privacy_Policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy | BlogShares Help System</title>
@@ -84,10 +84,11 @@ menu2[6]='<a href="/premium.php">Premium Members</a>'
 menu2[7]='<a href="/newest.php">Newest Players</a>'
 menu2[8]='<a href="/toptraders.php">Top Traders</a>'
 menu2[9]='<a href="/today.php">Played Today</a>'
-menu2[10]='<a href="/wikihelp/Hall_of_Fame">Hall of Fame</a>'
-menu2[11]='<a href="/cheatypants.php">Cheatypants Finder</a>'
-menu2[12]='<a href="/volunteer.php">Volunteer!</a>'
-menu2[13]='<a href="/yabbse/index.php?topic=16386.0">New? Come Say Hello!</a>'
+menu2[10]='<a href="/awards.php">Player Awards</a>'
+menu2[11]='<a href="/wikihelp/Hall_of_Fame">Hall of Fame</a>'
+menu2[12]='<a href="/cheatypants.php">Cheatypants Finder</a>'
+menu2[13]='<a href="/volunteer.php">Volunteer!</a>'
+menu2[14]='<a href="/yabbse/index.php?topic=16386.0">New? Come Say Hello!</a>'
 
 var menu3=new Array() // Leaders
 menu3[0]='<a href="/new_leaders.php">Leaderboard</a>'
@@ -118,7 +119,8 @@ menu5[9]='<a href="/user_stocktips.php">Ask Stock Broker</a>'
 menu5[10]='<a href="/priority.php">Priority Queue</a>'
 menu5[11]='<a href="/added.php">Newest Additions</a>'
 menu5[12]='<a href="/recent.php">Recently Indexed</a>'
-menu5[13]='<a href="/delist_error.php">Report Delist Error</a>'
+menu5[13]='<a href="/oldblogs.php">Old Blog Reviewer</a>'
+menu5[14]='<a href="/delist_error.php">Report Delist Error</a>'
 
 var menu6=new Array() //Premium menu
 menu6[0]='<a href="/industries.php">Industries</a>'
@@ -406,7 +408,7 @@ var navSet = [
 </div><!-- end navcontainer-->
 
 </div>
-<div id="article"><p style="text-align:center;font-size:9px;">System Time: 03:12 19 Dec 2008 - 5 Players Online</p><br><p style="font-size: 11px; text-align:right;"><a href="/wikihelp/Special:Categories" title="Special:Categories">Category</a>: <span dir="ltr"><a href="/wikihelp/Category:Official_Pages" title="Category:Official Pages">Official Pages</a></span></p>
+<div id="article"><p style="text-align:center;font-size:9px;">System Time: 23:06 14 Jun 2009 - 4 Players Online</p><br><p style="font-size: 11px; text-align:right;"><a href="/wikihelp/Special:Categories" title="Special:Categories">Category</a>: <span dir="ltr"><a href="/wikihelp/Category:Official_Pages" title="Category:Official Pages">Official Pages</a></span></p>
 <h1 class="pagetitle">Privacy Policy</h1><center>
 <div style="border: 1px dashed blue; width: 550px;">This is an <b>official</b> BlogShares Help System Page.<br>
 Only BlogShares Admins or Users with appropriate Official Roles may edit it.</div>
@@ -477,18 +479,18 @@ Disclosure and Visitor Choice
 <p>If you have an enquiry or concern about our privacy policy, please contact: support@blogshares.com.
 </p><p>We do not recommend another means by which visitors' concerns may be addressed.
 </p>
-<!-- Saved in parser cache with key wiki:pcache:idhash:319-0!1!0!!en!2!edit=0 and timestamp 20081219111905 -->
+<!-- Saved in parser cache with key wiki:pcache:idhash:319-0!1!0!!en!2!edit=0 and timestamp 20090615062236 -->
 
 <div class="printfooter">
 <p>Retrieved from "<a href="http://blogshares.com/wikihelp/Privacy_Policy">http://blogshares.com/wikihelp/Privacy_Policy</a>"</p>
 
-<p>This page has been accessed 7,684 times. This page was last modified 00:40, 6 February 2008 by <a href="/wikihelp/User:Bs23669" title="User:Bs23669">J.T. Sage</a>.  </p>
+<p>This page has been accessed 16,697 times. This page was last modified 00:40, 6 February 2008 by <a href="/wikihelp/User:Bs23669" title="User:Bs23669">J.T. Sage</a>.  </p>
 </div>
 
 </div><br clear="all">
 
 <div id="footer"><table width="98%" border="0" cellspacing="0"><tbody><tr><td width="152" rowspan="1">&nbsp;</td><td class="bottom" align="center" valign="top">
-<br>This page has been accessed 7,684 times. This page was last modified 00:40, 6 February 2008 by <a href="/wikihelp/User:Bs23669" title="User:Bs23669">J.T. Sage</a>.  <div style="text-align:center"><br>
+<br>This page has been accessed 16,697 times. This page was last modified 00:40, 6 February 2008 by <a href="/wikihelp/User:Bs23669" title="User:Bs23669">J.T. Sage</a>.  <div style="text-align:center"><br>
 <a href="mailto:support@blogshares.com">Contact</a> | <a href="http://blogshares.com/advertise.php">Advertise</a> | <a href="/wikihelp/Privacy_Policy">Privacy</a> | <a href="/wikihelp/TOS">Legal</a> | <a href="/wikihelp/Rules">Rules</a><br>
 <br>
 BlogShares is a service of <a href="http://santacruztech.com/">Santa Cruz Tech</a>.<br>
@@ -514,5 +516,5 @@ Are you looking for <a href="/topstock.php">Hot Stocks</a> or <a href="/top100.p
 </div></div>
 
 		<script type="text/javascript">if (window.runOnloadHook) runOnloadHook();</script>
-<!-- Served in 0.141 secs. -->
+<!-- Served in 0.233 secs. -->
 </body></html>
