--- a/m/my/myr/myredbook.com.html
+++ b/m/my/myr/myredbook.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the myredbook.com privacy policy that was archived on 2008-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081217033239id_/http%3A//myredbook.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the myredbook.com privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615065620id_/http%3A//www.myredbook.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 		<title>Privacy Statement : myredbook</title>
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<form name="Form1" method="post" action="privacy.aspx" id="Form1">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTIwMjU5ODEzNDVkZF3llG8osFn2zDBlNaM2BpvqoTtw">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="/wEPDwULLTIwMjU5ODEzNDVkZK2cy45qhnLQ3pNGvlxssdA6xQf0">
 
 			<table id="tblHeader" cellspacing="0" cellpadding="0" width="100%" border="0">
 				<tbody><tr>
@@ -47,7 +47,7 @@
 	<tbody><tr>
 		<td bgcolor="#eeeeee" width="8">&nbsp;</td>
 		<td bgcolor="#eeeeee" width="162"><span class="lftNav"> <nobr>
-					<a href="/default.aspx" target="_top">Home</a></nobr><br><a href="/join.aspx" target="_top">Join VIP</a><br><a href="/showpro.aspx?go=new" target="_top">Recent Reviews</a><br><a href="/showpro.aspx" target="_top">Search Reviews</a><br><a href="/rbsubmit.aspx" target="_top">Submit Review</a><br><br><a href="http://forum.myredbook.com/cgi-bin/dcforum2/dcboard.pl" target="_top">Message Board</a><br><a href="/links.aspx" target="_top">Links</a><br><a href="/db/profile.aspx" target="_top">Member Profile</a><br><a href="/faq.aspx" target="_top">FAQ</a><br><a href="/support.aspx" target="_top">Support</a><br><br><font color="#d12000">Login</font><br>
+					<a href="/default.aspx" target="_top">Home</a></nobr><br><a href="/join.aspx" target="_top">Join VIP</a><br><a href="/showpro.aspx?go=new" target="_top">Recent Reviews</a><br><a href="/showpro.aspx" target="_top">Search Reviews</a><br><a href="/rbsubmit.aspx" target="_top">Submit Review</a><br><br><a href="http://forum.myredbook.com/cgi-bin/dcforum2/dcboard.pl" target="_top">Message Board</a><br><a href="/links.aspx" target="_top">Links</a><br><a href="/db/profile.aspx" target="_top">Member Profile</a><br><a href="/faq.aspx" target="_top">FAQ</a><br><a href="/support.aspx" target="_top">Support</a><br><br><a href="/login.aspx" target="_top">Login</a><br>
 			</span>
 		</td>
 	</tr>
@@ -237,7 +237,7 @@
 	<tr>
 		<td align="left" height="20">&nbsp;&nbsp;<span class="visited"><a href="/showpro.aspx" target="_top">reviews</a> | <a href="/join.aspx" target="_top">join vip</a>
 				| <a href="/terms.aspx" target="_top">terms of use</a> | <a href="/privacy.aspx" target="_top">privacy</a></span></td>
-		<td align="right"><font face="Verdana, Helvetica" size="1">©2008 
+		<td align="right"><font face="Verdana, Helvetica" size="1">©2009 
 				myRedBook&nbsp;S.A.&nbsp;&nbsp;</font></td>
 	</tr>
 </tbody></table>
