--- a/f/fe/fee/feelgr8.co.uk.html
+++ b/f/fe/fee/feelgr8.co.uk.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the feelgr8.co.uk privacy policy that was archived on 2008-12-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081224050306id_/http%3A//www.feelgr8.co.uk/Privacy-Policy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the feelgr8.co.uk privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615084526id_/http%3A//www.feelgr8.co.uk/Privacy-Policy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Feelgr8.co.uk | Free article submission to our article database of over 25,000 articles!</title>
+<title>Feelgr8.co.uk | Free article submission to our article database of over 32,800 articles!</title>
+<meta name="lang" content="en-GB">
+<meta name="description" content="Submit your best quality articles for free submission in our database for featured exposure">
 <meta name="keywords" content="free article submission,article directory,article submission ">
-<meta name="description" content="Submit your best quality articles for free submission in our database for featured exposure"><meta name="lang" content="en-GB">
 <meta name="robots" content="index, follow">
 <link href="http://www.feelgr8.co.uk/default.css" rel="stylesheet" type="text/css">
 </head>
@@ -32,7 +33,7 @@
 					</ul>
 	</div> 
 	<div id="ads">
-	<a href="index.php?advert=566125"><img border="0" src="/images/advert.gif" alt="Huge Web Profits - How to Create a Raging Torrent of Cash Flowing Into Your Business Using PROVEN Strategies Requiring Little or No Money"></a>
+		<a href="http://www.feelgr8.co.uk/index.php?advert=554236"><img src="http://www.feelgr8.co.uk/images/banner.jpg" alt="Click here to get a FREE SEO report for your website" style="border:none;"></a>
 	</div>
 	<div id="content">
 		<div id="posts">
@@ -81,28 +82,55 @@
 			</div>
 			</div>			
 		</div>
+		
+			<div class="boxed"><h2 class="heading">Author Login</h2>
+			<div class="content">
+				<form method="post" action="/Submit-Article.html">
+					<div>
+						<input type="text" id="textfield1" name="username" value="username" onfocus="if (this.value == 'username') this.value = '';" size="18"><br>
+						<input type="password" id="textfield1" name="password" value="username" onfocus="if (this.value == 'username') this.value = '';" size="18">
+						<input type="submit" value="Login">
+						<p><a href="http://www.feelgr8.co.uk/index.php?register">Register</a></p>
+					</div>
+				</form>
+			</div>
+		</div>			<div class="boxed">
+		<script type="text/javascript"><!--
+google_ad_client = "pub-5204985795236279";
+/* 200x90, created 11/06/09 */
+google_ad_slot = "9199434206";
+google_ad_width = 200;
+google_ad_height = 90;
+//-->
+</script>
+<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+</script>
+</div>
 		<div id="top_author" class="top_author">
 			<h2 class="heading">Top Authors</h2>
 			<div class="content">
-				<div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/andy-dickens.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/andy-dickens.gif"></a>
-								Author: <b>andy</b><br>
-								Articles: <b>11</b><br>
-								<a href="http://www.feelgr8.co.uk/author/andy-dickens.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Sally-Ormond.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Sally-Ormond.jpg"></a>
+				<div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Colin-jeffrey.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Colin-jeffrey.jpg"></a>
+								Author: <b>Colin</b><br>
+								Articles: <b>2</b><br>
+								<a href="http://www.feelgr8.co.uk/author/Colin-jeffrey.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Tristen-Watson.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Tristen-Watson.jpg"></a>
+								Author: <b>Tristen</b><br>
+								Articles: <b>2</b><br>
+								<a href="http://www.feelgr8.co.uk/author/Tristen-Watson.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/sam-milner.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/sam-milner.jpg"></a>
+								Author: <b>sam</b><br>
+								Articles: <b>102</b><br>
+								<a href="http://www.feelgr8.co.uk/author/sam-milner.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Gilbert-Arenas.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Gilbert-Arenas.jpg"></a>
+								Author: <b>Gilbert</b><br>
+								Articles: <b>63</b><br>
+								<a href="http://www.feelgr8.co.uk/author/Gilbert-Arenas.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Sally-Ormond.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Sally-Ormond.jpg"></a>
 								Author: <b>Sally</b><br>
 								Articles: <b>7</b><br>
-								<a href="http://www.feelgr8.co.uk/author/Sally-Ormond.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Nicolas-Paice.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Nicolas-Paice.jpg"></a>
-								Author: <b>Nicolas</b><br>
-								Articles: <b>7</b><br>
-								<a href="http://www.feelgr8.co.uk/author/Nicolas-Paice.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/author/Tim-Richardson.html"><img style="border:none; float:left; clear:both; margin:0 10px 5px 0" src="/images/authors/thumbnails_small/Tim-Richardson.jpg"></a>
-								Author: <b>Tim</b><br>
-								Articles: <b>26</b><br>
-								<a href="http://www.feelgr8.co.uk/author/Tim-Richardson.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/index.php?submit-article&amp;profile">add your profile</a></div>			</div>
+								<a href="http://www.feelgr8.co.uk/author/Sally-Ormond.html">View profile</a></div><div style="float:left; display:block; margin-bottom:10px;"><a href="http://www.feelgr8.co.uk/index.php?submit-article&amp;profile">add your profile</a></div>			</div>
 		</div>
 		<div id="blogroll" class="boxed">
 			<h2 class="heading">Sponsors</h2>
 			<div class="content">
 				<ul>
-				<li class="first"><a href="http://www.kdfosponsorship.co.uk/" rel="nofollow" target="_blank">Khmer Development of Freedom Organization</a></li><li><a href="http://talkmoneyblog.co.uk" rel="nofollow" target="_blank">Money Saving Expert</a></li><li><a href="http://www.ukspeeding.com" rel="nofollow" target="_blank">Appeal Your Speeding Ticket with NO POINTS!</a></li><li><a href="http://www.PipelineCard.org" rel="nofollow" target="_blank">Save money on fuel with a Free Pipeline Card</a></li><li><a href="http://www.simonbell.biz" rel="nofollow" target="_blank">Simon Bell .biz</a></li>					<li><a href="/Advertising.html">CLICK HERE to add your website</a></li>
+				<li class="first"><a href="http://www.kdfosponsorship.co.uk/" rel="nofollow" target="_blank">Khmer Development of Freedom Organization</a></li><li><a href="http://www.ukspeeding.com" rel="nofollow" target="_blank">Appeal Your Speeding Ticket with NO POINTS!</a></li><li><a href="http://www.PipelineCard.org" rel="nofollow" target="_blank">Save money on fuel with a Free Pipeline Card</a></li><li><a href="http://www.simonbell.biz" rel="nofollow" target="_blank">Simon Bell .biz</a></li>					<li><a href="/Advertising.html">CLICK HERE to add your website</a></li>
 				</ul>
 			</div>
 		</div>
@@ -120,21 +148,21 @@
 			<h2 class="heading">Categories</h2>
 			<div class="content">
 				<ul>
-				<li class="first"><a href="/categories/Automotive">Automotive</a> (296)</li><li><a href="/categories/Business">Business</a> (3739)</li><li><a href="/categories/Computing">Computing</a> (694)</li><li><a href="/categories/Education">Education</a> (389)</li><li><a href="/categories/Entertainment">Entertainment</a> (618)</li><li><a href="/categories/Family">Family</a> (1651)</li><li><a href="/categories/Finance">Finance</a> (2009)</li><li><a href="/categories/Food-and-Drink">Food and Drink</a> (348)</li><li><a href="/categories/Health">Health</a> (4032)</li><li><a href="/categories/Internet-Marketing">Internet Marketing</a> (5750)</li><li><a href="/categories/Legal">Legal</a> (400)</li><li><a href="/categories/Pets-and-Animals">Pets and Animals</a> (95)</li><li><a href="/categories/Political">Political</a> (177)</li><li><a href="/categories/Religious">Religious</a> (272)</li><li><a href="/categories/Self-Improvement">Self Improvement</a> (1689)</li><li><a href="/categories/Social">Social</a> (647)</li><li><a href="/categories/Sports">Sports</a> (590)</li><li><a href="/categories/Travel-and-Leisure">Travel and Leisure</a> (1010)</li><li><a href="/categories/Writing-and-Speaking">Writing and Speaking</a> (283)</li>				</ul>
+				<li class="first"><a href="/categories/Automotive">Automotive</a> (425)</li><li><a href="/categories/Business">Business</a> (5341)</li><li><a href="/categories/Computing">Computing</a> (962)</li><li><a href="/categories/Education">Education</a> (533)</li><li><a href="/categories/Entertainment">Entertainment</a> (810)</li><li><a href="/categories/Family">Family</a> (2244)</li><li><a href="/categories/Finance">Finance</a> (2788)</li><li><a href="/categories/Food-and-Drink">Food and Drink</a> (457)</li><li><a href="/categories/Health">Health</a> (5065)</li><li><a href="/categories/Internet-Marketing">Internet Marketing</a> (7114)</li><li><a href="/categories/Legal">Legal</a> (553)</li><li><a href="/categories/Pets-and-Animals">Pets and Animals</a> (4)</li><li><a href="/categories/Political">Political</a> (207)</li><li><a href="/categories/Religious">Religious</a> (361)</li><li><a href="/categories/Self-Improvement">Self Improvement</a> (2083)</li><li><a href="/categories/Social">Social</a> (773)</li><li><a href="/categories/Sports">Sports</a> (766)</li><li><a href="/categories/Travel-and-Leisure">Travel and Leisure</a> (1295)</li><li><a href="/categories/Writing-and-Speaking">Writing and Speaking</a> (343)</li>				</ul>
 			</div>
 		</div>
         <div id="archives" class="boxed">
 			<h2 class="heading">Archives</h2>
 			<div class="content">
 				<ul>
-				<li class="first"><a href="/archives/September-2007">September 2007</a> (128) </li><li><a href="/archives/October-2007">October 2007</a> (1248) </li><li><a href="/archives/November-2007">November 2007</a> (1143) </li><li><a href="/archives/December-2007">December 2007</a> (1056) </li><li><a href="/archives/January-2008">January 2008</a> (1318) </li><li><a href="/archives/February-2008">February 2008</a> (1485) </li><li><a href="/archives/March-2008">March 2008</a> (1745) </li><li><a href="/archives/April-2008">April 2008</a> (1761) </li><li><a href="/archives/May-2008">May 2008</a> (1900) </li><li><a href="/archives/June-2008">June 2008</a> (1751) </li><li><a href="/archives/July-2008">July 2008</a> (1854) </li><li><a href="/archives/August-2008">August 2008</a> (1640) </li><li><a href="/archives/September-2008">September 2008</a> (1989) </li><li><a href="/archives/October-2008">October 2008</a> (2987) </li><li><a href="/archives/November-2008">November 2008</a> (1480) </li><li><a href="/archives/December-2008">December 2008</a> (1099) </li>				</ul>
+				<li class="first"><a href="/archives/September-2007">September 2007</a> (128) </li><li><a href="/archives/October-2007">October 2007</a> (1248) </li><li><a href="/archives/November-2007">November 2007</a> (1143) </li><li><a href="/archives/December-2007">December 2007</a> (1056) </li><li><a href="/archives/January-2008">January 2008</a> (1318) </li><li><a href="/archives/February-2008">February 2008</a> (1485) </li><li><a href="/archives/March-2008">March 2008</a> (1745) </li><li><a href="/archives/April-2008">April 2008</a> (1761) </li><li><a href="/archives/May-2008">May 2008</a> (1900) </li><li><a href="/archives/June-2008">June 2008</a> (1751) </li><li><a href="/archives/July-2008">July 2008</a> (1854) </li><li><a href="/archives/August-2008">August 2008</a> (1640) </li><li><a href="/archives/September-2008">September 2008</a> (1989) </li><li><a href="/archives/October-2008">October 2008</a> (2987) </li><li><a href="/archives/November-2008">November 2008</a> (1480) </li><li><a href="/archives/December-2008">December 2008</a> (1409) </li><li><a href="/archives/January-2009">January 2009</a> (1489) </li><li><a href="/archives/February-2009">February 2009</a> (1369) </li><li><a href="/archives/March-2009">March 2009</a> (1182) </li><li><a href="/archives/April-2009">April 2009</a> (1285) </li><li><a href="/archives/May-2009">May 2009</a> (1293) </li><li><a href="/archives/June-2009">June 2009</a> (814) </li>				</ul>
 			</div>
 		</div>
 		<div id="popular" class="boxed">
 			<h2 class="heading">Most Popular</h2>
 			<div class="content">
 				<ul>
-				<li class="first"><a href="/articles/10312.html">Difference Between Fat Diets and Diet Pills</a> (3067 views)</li><li><a href="/articles/1262.html">Does Porridge Make You Fat</a> (1292 views)</li><li><a href="/articles/1868.html">The pen is mightier than the sword; writing to promote your website</a> (1164 views)</li><li><a href="/articles/437.html">The Ultimate Fat Burning Secret</a> (1102 views)</li><li><a href="/articles/269.html">Good News About the Subprime Mortgage Crisis</a> (993 views)</li>				</ul>
+				<li class="first"><a href="/articles/10312.html">Difference Between Fat Diets and Diet Pills</a> (4014 views)</li><li><a href="/articles/2285.html">What Are Fitness Singles</a> (1772 views)</li><li><a href="/articles/1262.html">Does Porridge Make You Fat</a> (1705 views)</li><li><a href="/articles/437.html">The Ultimate Fat Burning Secret</a> (1627 views)</li><li><a href="/articles/1868.html">The pen is mightier than the sword; writing to promote your website</a> (1558 views)</li>				</ul>
 			</div>
 		</div>
 	</div>
@@ -142,7 +170,7 @@
 		<table border="0"><tbody><tr><td><table border="0"><tbody><tr><td valign="middle"><a href="/rss"><img src="/logo-rss.jpg" width="15" height="15" border="0" align="middle" alt="RSS"></a></td><td valign="middle"><a href="/rss">RSS</a></td> <td>| Copyright © 2007 Feelgr8.co.uk. Designed by <a href="http://www.spruzz.com"><strong>Spruzz</strong></a></td></tr></tbody></table>
 		<a href="/Contact.html">Contact</a> | <a href="/About.html">About</a> | <a href="/Terms-and-Conditions.html">Terms and Conditions</a> | <a href="/Privacy-Policy.html">Privacy Policy</a> | <a href="/Site-Map.html">Site Map</a></td><td align="center" width="200">
     	<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" border="0"></a>
- 		<a href="http://jigsaw.w3.org/css-validator/"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" border="0"></a></td><td>This page was created in 0.03 seconds</td></tr></tbody></table>
+ 		<a href="http://jigsaw.w3.org/css-validator/"><img style="border:0;width:88px;height:31px" src="http://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!" border="0"></a></td><td>This page was created in 0.19 seconds</td></tr></tbody></table>
 	</div>
 
 <script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
@@ -151,14 +179,11 @@
 _uacct = "UA-1915611-3";
 urchinTracker();
 </script>
-<p>&nbsp;</p>
-<!-- Start of ukbanners code --> 
-<table cellpadding="0" cellspacing="0" width="100%" border="0">
-<tbody><tr><td align="center"><iframe src="http://www.ukbanners.com/cgi/banners.cgi?i=1;account=B102059;page=1" width="468" height="60" frameborder="0" marginheight="0" marginwidth="0" scrolling="NO"></iframe></td></tr>
-<tr><td align="center"><a href="http://www.ukbanners.com" target="_parent">
-<img src="http://www.ukbanners.com/ukbannersbar.gif" alt="website promotion" width="468" height="14" border="0"></a></td></tr>
-</tbody></table>
-<!-- End of ukbanners code --> 
+<!-- http://www.LiveZilla.net Tracking Code --><div id="livezilla_tracking" style="display:none"><script type="text/javascript" src="http://www.designbuds.com/livechat/server.php?request=track&amp;output=jscript&amp;nse=0.24941537742211195"></script></div><script language="JavaScript" type="text/javascript">
+<!--
+var script = document.createElement("script");script.type="text/javascript";var src = "http://www.designbuds.com/livechat/server.php?request=track&output=jscript&nse="+Math.random();setTimeout("script.src=src;document.getElementById('livezilla_tracking').appendChild(script)",1);
+// -->
+</script><!-- http://www.LiveZilla.net Tracking Code -->
 
 
 
