uts.edu.au (archived on 2009-06-15)
{
  "alexa_rank": 17008,
  "analysis_subcorpus": true,
  "categories": "education",
  "char_count": 2422,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.48,
  "homepage_snapshot_redirected_domain": "uts.edu.au",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20090331061110id_/http://www.uts.edu.au/",
  "homepage_snapshot_url": "https://web.archive.org/web/20090331061110id_/http%3A//uts.edu.au",
  "interval": "2009_A",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "uts.edu.au",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20090615153953id_/http%3A//www.uts.edu.au/privacy.html",
  "policy_title": "UTS: Privacy - University of Technology, Sydney",
  "policy_url": "uts.edu.au/privacy.html",
  "sha1": "0b293f719d76edac9b9458ee4ed49acf16bc3abd",
  "simhash": 10729072472158720251,
  "simhash_updated": false,
  "site_hostname": "uts.edu.au",
  "site_url": "http://uts.edu.au",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20090615153953",
  "word_count": 396,
  "year": 2009
}

--- a/u/ut/uts/uts.edu.au.html
+++ b/u/ut/uts/uts.edu.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the uts.edu.au privacy policy that was archived on 2008-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20081216161118id_/http%3A//www.uts.edu.au/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the uts.edu.au privacy policy that was archived on 2009-06-15.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20090615153953id_/http%3A//www.uts.edu.au/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
@@ -56,11 +56,11 @@ Using a modern browser that supports web standards ensures that the site's full 
 
 </div>
 
-<!-- Banner -->
-<div id="banner">
+<!-- Global Utility Bar -->
+<div id="global-utility-bar">
 <!-- UTS Logo -->
 <div id="uts-logo">
-<a href="http://www.uts.edu.au/"><img src="http://www.uts.edu.au/images/css/utslogo.gif" alt="University of Technology, Sydney homepage" width="132" height="30"></a>
+<a href="http://www.uts.edu.au"><img src="http://www.uts.edu.au/images/css/utslogo.gif" alt="University of Technology, Sydney homepage" width="132" height="30"></a>
 </div>
 
 <!-- Main Title -->
@@ -68,26 +68,25 @@ Using a modern browser that supports web standards ensures that the site's full 
 <p>University of Technology, Sydney</p>
 </div>
 
-<!-- Banner Navigation -->
-<div id="banner-nav">
-<img src="http://www.uts.edu.au/images/css/uts_square.gif" alt="" width="9" height="9">
+<!-- Global Utility Bar Navigation -->
+<div id="global-utility-bar-nav">
 <a name="navigation"></a><!-- Skip to Navigation Anchor -->
-<a href="http://www.uts.edu.au/siteindex.html">Site index</a> | 
-<a href="http://www.uts.edu.au/sitemap.html">Site map</a> | 
 <a href="http://email.itd.uts.edu.au/webapps/directory/byname/">Staff directory</a> | 
+<a href="https://email.itd.uts.edu.au/email/">Webmail</a> | 
+<a href="http://www.uts.edu.au/siteindex.html">Site index</a> | 
+<a href="http://www.uts.edu.au/about/mapsdirections/">Maps</a> | 
 <a href="http://www.newsroom.uts.edu.au/">Newsroom</a> | 
-<a href="http://www.events.uts.edu.au/web/">Events</a> | 
-<a href="http://www.uts.edu.au/about/contacts.html">Contacts</a>
+<a href="http://www.events.uts.edu.au/web/">What's on</a>
 </div>
 
 
-<!--  Search Form -->
-<div id="banner-search">
+
+<!-- Search Form -->
+<div id="global-utility-bar-search">
 <form method="get" action="http://datasearch.uts.edu.au/search.cfm">
    <div>
-      SEARCH
       <input type="text" name="q" size="14" maxlength="100">
-      <input type="submit" name="btnG" value="Go">
+      <input type="submit" name="btnG" value="Search">
    </div>
 </form>
 </div>
@@ -145,11 +144,7 @@ Using a modern browser that supports web standards ensures that the site's full 
 switchTab(-1);
 -->
 </script>
-				<script type="text/javascript">
-<!--
-switchTab(-1);
--->
-</script>
+				
 			</div>
 		</div>
 		</div>
@@ -183,6 +178,7 @@ switchTab(-1);
 		<div id="contents0" class="tab_contents" style="display: block;">
 			
 			<div id="contact-us">
+
 <p class="phone">p: +61 2 9514 2000<br>
 <!--
 f: +61 2 9514 1551<br />
@@ -229,7 +225,15 @@ Australia</p>
 			
 			<div id="sidebar-events">
 
-<script src="http://www.events.uts.edu.au/app/feed.cfm?module=events&amp;PublicationId=135&amp;action=list&amp;format=js&amp;fields=title,date&amp;OutputTemplate=2&amp;MaxRows=3&amp;DetailUrl=http://www.newsroom.uts.edu.au/events/detail.cfm&amp;DetailUrlField=title" type="text/javascript"></script>
+
+						<script type="text/javascript">
+							<!-- 
+							/* <![CDATA[ */
+								document.write('<script type="text/javascript" src="http://www.events.uts.edu.au/app/feed.cfm?module=events&amp;PublicationId=135&amp;action=list&amp;format=js&amp;fields=title,date&amp;OutputTemplate=2&amp;MaxRows=3&amp;DetailUrl=http://www.newsroom.uts.edu.au/events/detail.cfm&amp;DetailUrlField=title"><');
+								document.write('/script>');
+							/* ]]> */
+							 -->
+						</script><script type="text/javascript" src="http://www.events.uts.edu.au/app/feed.cfm?module=events&amp;PublicationId=135&amp;action=list&amp;format=js&amp;fields=title,date&amp;OutputTemplate=2&amp;MaxRows=3&amp;DetailUrl=http://www.newsroom.uts.edu.au/events/detail.cfm&amp;DetailUrlField=title"></script>
 
 <p><a href="http://www.newsroom.uts.edu.au/events/">More events...</a></p>
 </div>
@@ -392,7 +396,7 @@ Australian Technology Network of Universities</a>
 
 
 <div id="footer-text">
-© Copyright UTS - CRICOS Provider No: 00099F - 18 November 2008 4:37 PM<br>
+© Copyright UTS - CRICOS Provider No: 00099F - 27 January 2009 11:15 AM<br>
 The page is authorised by Deputy Vice-Chancellor and Vice-President (Corporate Services) - 
 Send comments to <a href="mailto:webteam@uts.edu.au?subject=UTSWeb Comment - Privacy statement page">UTSWeb Team</a><br>
 <a href="http://www.uts.edu.au/disclaimer.html">Disclaimer</a> |
